Change 'Work' to 'Projects' in navigation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="site-title">Gennady Korzhevskiy</h1>
       <nav>
         <ul class="nav-list">
-          <li><a href="#work">Work</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
