Center chat widget, match intro width, and improve visual style

--- a/index.html
+++ b/index.html
@@ -28,5 +28,30 @@
       </p>
     </section>
   </main>
+  <!-- Chat Widget Target -->
+  <div class="vf-chat-widget-wrapper">
+    <div id="vf-chat-widget"></div>
+  </div>
+
+  <script type="text/javascript">
+    (function(d, t) {
+        var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+        v.onload = function() {
+          window.voiceflow.chat.load({
+            verify: { projectID: '687cf7450dde4cc3e9cbe646' },
+            url: 'https://general-runtime.voiceflow.com',
+            versionID: 'production',
+            voice: {
+              url: "https://runtime-api.voiceflow.com"
+            },
+            render: {
+              mode: 'embedded',
+              target: document.getElementById('vf-chat-widget') // <-- Use your div's ID here
+            }
+          });
+        }
+        v.src = "https://cdn.voiceflow.com/widget-next/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+    })(document, 'script');
+  </script>
 </body>
 </html> 
