--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="intro">
       <h2 class="headline">Head of AI at Fingular</h2>
       <p class="description">
-        Define and execute Fingular's AI strategy. My goal is to build a network of AI Agents that automate routine work and increase employee productivity across all business functions. Outcome: superior products that customers love, developed more quickly, at orders of magnitude lower cost.
+        I define and execute Fingular's AI strategy. My goal is to build a network of AI Agents that automate routine work and increase employee productivity across all business functions. Outcome: superior products that customers love, developed more quickly, at orders of magnitude lower cost.
       </p>
     </section>
   </main>
