--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="site-title">Gennady Korzhevskiy</h1>
       <nav>
         <ul class="nav-list">
-          <li><a href="projects.html">Projects</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
