Revert navigation links to relative paths for GitHub Pages compatibility

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <h1 class="site-title">Gennady Korzhevskiy</h1>
       <nav>
         <ul class="nav-list">
-          <li><a href="/portfolio.html">Portfolio</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
